[gd_scene load_steps=2 format=3 uid="uid://d2bank456"]

[ext_resource type="Script" path="res://scenes/ui/screens/BankScreen.gd" id="1_bank"]

[node name="BankScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bank")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "üè¶ Banka Deposu"
theme_override_font_sizes/font_size = 40
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)

[node name="BackButton" type="Button" parent="MarginContainer/VBox/Header"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
text = "Geri"
theme_override_font_sizes/font_size = 24

[node name="InfoPanel" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBox/InfoPanel"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="VBox1" type="VBoxContainer" parent="MarginContainer/VBox/InfoPanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBox/InfoPanel/HBox/VBox1"]
layout_mode = 2
text = "Kullanƒ±lan Slot"
theme_override_font_sizes/font_size = 20

[node name="SlotLabel" type="Label" parent="MarginContainer/VBox/InfoPanel/HBox/VBox1"]
unique_name_in_owner = true
layout_mode = 2
text = "25/50"
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)

[node name="VBox2" type="VBoxContainer" parent="MarginContainer/VBox/InfoPanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBox/InfoPanel/HBox/VBox2"]
layout_mode = 2
text = "Geni≈ületme Maliyeti"
theme_override_font_sizes/font_size = 20

[node name="CostLabel" type="Label" parent="MarginContainer/VBox/InfoPanel/HBox/VBox2"]
unique_name_in_owner = true
layout_mode = 2
text = "500 Gem"
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.5, 0.85, 1, 1)

[node name="ExpandButton" type="Button" parent="MarginContainer/VBox/InfoPanel/HBox"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
text = "Geni≈ület
(+25 slot)"
theme_override_font_sizes/font_size = 24

[node name="TabButtons" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="AllButton" type="Button" parent="MarginContainer/VBox/TabButtons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "T√ºm√º"
theme_override_font_sizes/font_size = 24

[node name="WeaponButton" type="Button" parent="MarginContainer/VBox/TabButtons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "Silah"
theme_override_font_sizes/font_size = 24

[node name="ArmorButton" type="Button" parent="MarginContainer/VBox/TabButtons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "Zƒ±rh"
theme_override_font_sizes/font_size = 24

[node name="PotionButton" type="Button" parent="MarginContainer/VBox/TabButtons"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
text = "ƒ∞ksir"
theme_override_font_sizes/font_size = 24

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemGrid" type="GridContainer" parent="MarginContainer/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 4

[node name="ActionPanel" type="PanelContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBox/ActionPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="DepositButton" type="Button" parent="MarginContainer/VBox/ActionPanel/HBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
text = "üì• Envanterden Yatƒ±r"
theme_override_font_sizes/font_size = 28

[node name="WithdrawButton" type="Button" parent="MarginContainer/VBox/ActionPanel/HBox"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
text = "üì§ Envantere √áek"
theme_override_font_sizes/font_size = 28
